--- a/scripts/api-inference/templates/specs_payload.handlebars
+++ b/scripts/api-inference/templates/specs_payload.handlebars
@@ -1,5 +1,9 @@
 | Payload |  |  |
 | :--- | :--- | :--- |
 {{#each schema}}
+{{#if type}}
 | **{{{name}}}** | _{{type}}, {{required}}_ | {{{description}}} |
+{{else}}
+| **{{{name}}}** |  | {{{description}}} |
+{{/if}}
 {{/each}}
