better handling of parameters

--- a/scripts/api-inference/templates/common/specs_payload.handlebars
+++ b/scripts/api-inference/templates/common/specs_payload.handlebars
@@ -2,7 +2,7 @@
 | :--- | :--- | :--- |
 {{#each schema}}
 {{#if type}}
-| **{{{name}}}** | _{{type}}, {{required}}_ | {{{description}}} |
+| **{{{name}}}{{#if required}}*{{/if}}** | _{{type}}_ | {{{description}}} |
 {{else}}
 | **{{{name}}}** |  | {{{description}}} |
 {{/if}}
